--- a/infra/config/prod/monitoring-system/loki/values.yaml
+++ b/infra/config/prod/monitoring-system/loki/values.yaml
@@ -1,148 +1,113 @@
-#  loki:
-#   loki:
-#     storage:
-#       bucketNames:
-#         chunks: loki-chunks-prod
-#         ruler: loki-ruler-prod
-#         admin: loki-admin-prod
-#     limits_config:
-#       retention_period: 30d
-#       ingestion_rate_mb: 16
-#       ingestion_burst_size_mb: 32
-#   singleBinary:
-#     replicas: 1
-#     resources:
-#       requests:
-#         cpu: 500m
-#         memory: 1Gi
-#       limits:
-#         cpu: 1000m
-#         memory: 2Gi
-#     persistence:
-#       enabled: false
-#   monitoring:
-#     serviceMonitor:
-#       enabled: true
-#       labels:
-#         release: prometheus-stack
+# Production Loki Configuration
+# This file contains production-specific Loki settings for log aggregation
+# Configured for SimpleScalable deployment mode with filesystem storage
 
-# promtail:
-#   resources:
-#     requests:
-#       cpu: 100m
-#       memory: 128Mi
-#     limits:
-#       cpu: 200m
-#       memory: 256Mi
-#   config:
-#     clients:
-#       - url: http://loki:3100/loki/api/v1/push
-#     scrape_configs:
-#       # Backend logs
-#       - job_name: backend-logs
-#         static_configs:
-#           - targets:
-#               - localhost
-#             labels:
-#               job: backend
-#               namespace: prod
-#               app: backend
-#               __path__: /var/log/pods/prod_backend-prod-*/*backend*/0.log
-#       # Frontend logs
-#       - job_name: frontend-logs
-#         static_configs:
-#           - targets:
-#               - localhost
-#             labels:
-#               job: frontend
-#               namespace: prod
-#               app: frontend
-#               __path__: /var/log/pods/prod_frontend-prod-*/*frontend*/0.log
-#       # Prometheus logs
-#       - job_name: prometheus-logs
-#         static_configs:
-#           - targets:
-#               - localhost
-#             labels:
-#               job: prometheus
-#               namespace: prod
-#               app: prometheus
-#               __path__: /var/log/pods/prod_prometheus-*/*prometheus*/0.log
-#       # Grafana logs
-#       - job_name: grafana-logs
-#         static_configs:
-#           - targets:
-#               - localhost
-#             labels:
-#               job: grafana
-#               namespace: prod
-#               app: grafana
-#               __path__: /var/log/pods/prod_*grafana*/*grafana*/0.log
-          
-
-
+# Loki log aggregation system configuration
 loki:
-  # global:
-  #   image:
-  #     registry: 206802406579.dkr.ecr.eu-west-1.amazonaws.com/eks-addons
+  # Use SimpleScalable deployment mode for production
+  # This separates read, write, and backend components for better scalability
+  deploymentMode: SimpleScalable
+  
+  # Loki core configuration
   loki:
-    fullnameOverride: loki-prod
-
+    fullnameOverride: loki-prod  # Override name for production instance
+    
+    # Authentication and security
+    auth_enabled: false          # Disable authentication for internal use
+    
+    # Storage configuration using filesystem (not cloud storage)
     storage:
+      type: filesystem           # Use local filesystem storage
       bucketNames:
-        chunks: loki-chunks-prod
-        ruler: loki-ruler-prod
-        admin: loki-admin-prod
-      # type: s3
-      # s3:
-      #   # s3 URL can be used to specify the endpoint, access key, secret key, and bucket name
-      #   s3: s3://eu-west-1
-      #   endpoint: null
-      #   region: eu-west-1
-      #   access_key_id: null
-      #   secret_access_key: null
-
+        chunks: loki-chunks-prod # Chunk storage bucket name
+        ruler: loki-ruler-prod   # Ruler storage bucket name
+        admin: loki-admin-prod   # Admin storage bucket name
+    
+    # Rate limiting and retention configuration
     limits_config:
-      retention_period: 30d
-      ingestion_rate_mb: 16
-      ingestion_burst_size_mb: 32
-    # structuredConfig:
-      storage_config:
-        aws:
-          bucketnames: mvno-loki-prod
-          sse:
-            type: SSE-KMS
-            kms_key_id: arn:aws:kms:eu-west-1:656581615771:key/48da66d1-ff88-4af3-a518-e520bc6fab3f
+      retention_period: 30d      # Keep logs for 30 days
+      ingestion_rate_mb: 16      # Maximum ingestion rate per tenant
+      ingestion_burst_size_mb: 32 # Burst size for ingestion spikes
+    
+    # Storage backend configuration
+    storage_config:
+      filesystem:
+        directory: /var/loki/data # Directory for storing log data
+      boltdb_shipper:
+        active_index_directory: /var/loki/data/boltdb-index
+        cache_location: /var/loki/data/boltdb-cache
+        shared_store: filesystem
+  
+  # Backend component configuration (handles compaction, deletion, etc.)
   backend:
+    replicas: 1                  # Single replica for production
     resources:
-      limits:
-        memory: "300Mi"
       requests:
-        cpu: "40m"
-        memory: "200Mi"
+        cpu: "40m"               # Minimum CPU required
+        memory: "200Mi"          # Minimum memory required
+      limits:
+        cpu: "200m"              # Maximum CPU allowed
+        memory: "300Mi"          # Maximum memory allowed
+    persistence:
+      enabled: true              # Enable persistent storage
+      size: "20Gi"              # Storage size for backend data
+  
+  # Read component configuration (handles queries)
   read:
+    replicas: 1                  # Single replica for production
     resources:
-      limits:
-        memory: "1Gi"
       requests:
-        cpu: "16m"
-        memory: "496Mi"
+        cpu: "16m"               # Minimum CPU required
+        memory: "496Mi"          # Minimum memory required
+      limits:
+        cpu: "100m"              # Maximum CPU allowed
+        memory: "1Gi"            # Maximum memory allowed
+    persistence:
+      enabled: true              # Enable persistent storage
+      size: "10Gi"              # Storage size for read cache
+  
+  # Write component configuration (handles log ingestion)
   write:
+    replicas: 1                  # Single replica for production
     resources:
-      limits:
-        memory: "2Gi"
       requests:
-        cpu: "29m"
-        memory: "1Gi"
+        cpu: "29m"               # Minimum CPU required
+        memory: "1Gi"            # Minimum memory required
+      limits:
+        cpu: "200m"              # Maximum CPU allowed
+        memory: "2Gi"            # Maximum memory allowed
+    persistence:
+      enabled: true              # Enable persistent storage
+      size: "30Gi"              # Storage size for write buffer
+  
+  # Gateway component configuration (load balancer/proxy)
   gateway:
+    replicas: 1                  # Single replica for production
     resources:
-      limits:
-        memory: "300Mi"
       requests:
-        cpu: "10m"
-        memory: "100Mi"
-
-  # serviceAccount:
-  #   name: loki-prod
-  #   annotations:
-  #     eks.amazonaws.com/role-arn: arn:aws:iam::206802406579:role/Bounded-eks-loki-role-prod
+        cpu: "10m"               # Minimum CPU required
+        memory: "100Mi"          # Minimum memory required
+      limits:
+        cpu: "50m"               # Maximum CPU allowed
+        memory: "300Mi"          # Maximum memory allowed
+  
+  # Disable components not needed for this deployment
+  singleBinary:
+    replicas: 0                  # Disable single binary mode
+  
+  # Monitoring configuration
+  monitoring:
+    serviceMonitor:
+      enabled: true              # Enable Prometheus monitoring
+      labels:
+        release: prometheus-stack-prod  # Label for Prometheus discovery
+  
+  # Disable optional components to reduce resource usage
+  minio:
+    enabled: false               # No MinIO object storage
+  lokiCanary:
+    enabled: false               # No canary testing
+  ruler:
+    enabled: false               # No alerting rules
+  test:
+    enabled: false               # No test pods
